🕶️🍄 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "glitch-hello-node",
+  "name": "A new Direction",
   "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
+  "description": "A game about Chocies",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
